--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "creact",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://luigicampagnola.github.io/M-project",
+  "homepage": "https://luigicampagnola.github.io/M-Project",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
